--- a/styles.css
+++ b/styles.css
@@ -27,8 +27,10 @@
 }
 
 .userText{
-    justify-content: flex-end;
-    display: flex;
+    /* justify-content: flex-end;
+    display: flex; */
+    width: auto;
+    text-align: right;
 }
 
 .friendText{
@@ -40,29 +42,36 @@
     border-radius: 10px;
     padding: 20px;
     margin: 5px;
+    display: inline-block;
+    text-align: left;
+    max-width: 300px;
 }
 
-.userText .messageBubble{
+.userText .messageBubble,
+#sender2 {
     background-color: green;
 }
 
-.friendText .messageBubble{
+.friendText .messageBubble,
+#sender1{
     background-color: grey;
 }
 
 #writeMessageRow {
     background-color: lightgrey;
     height: 15%;
-    justify-content: space-between;
     display: flex;
 }
 
 #writeMessageRow input {
     height: 100%;
     width: 80%;
+    border: 1px solid black;
 }
 
 #writeMessageRow button {
     height: 100%;
     width: 10%;
+    border: 1px solid black;
+    box-shadow: none;
 }
